2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Improved the build script to remove unnecessary files.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Fixed a nil access bug in starting up.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Tweaked the default theme and the sample theme.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Changed max lines of log views to 300.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Changed to copy a sample theme on making an user theme directory.
	Tweaked the Spring Night theme.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, themes should be sorted in the dictionary order on the preference dialog.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Completed implementation of theme for the server tree.
	Changed the Spring Night theme.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Changed a theme file name from .yml to .yaml.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Added OS to WebKit DPI conversion.
	Fixed a bug, the log font setting should be stored in its font name not font family name.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Added an option, override log font.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Added a button to open the user theme path in finder on the preference dialog.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Removed the default theme file.
	Changed to rescue exceptions from dir.mkpath.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Added +h channel mode support.
	Changed to print operator marks in the center.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Implemented theme for the member list.
	Changed to print operator marks and nick names separately in the member list.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Changed to set background color for log views to stop flickering in starting up.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>
