@@ -1,0 +1,56 @@
+html {
+  font-family: 'Lucida Grande';
+  font-size: 9pt;
+  background-color: black;
+  color: #d4d4d4;
+  padding: 0;
+  margin: 0;
+}
+
+body { margin: 0; }
+body.console {
+  padding: 3px 4px 10px 4px;
+}
+body.normal {
+  padding: 3px 4px 10px 4px;
+  background-image: url(Deep\ Ocean/background.png);
+  background-repeat: repeat-x;
+  background-attachment: fixed;
+}
+
+hr { margin: 0.5em 2em; }
+
+a { color: inherit; }
+.url { word-break: break-all; }
+.address { text-decoration: underline; word-break: break-all; }
+.highlight { color: #ffc58a; font-size: 160%; font-weight: normal; }
+.line { margin: 0 -4px; padding: 0 4px 1px 4px; }
+.even_line {}
+.odd_line {}
+
+.time { color: #3175b9; }
+.place { color: #808080; }
+.nick_normal { color: #9abfe4; }
+.nick_myself { color: #3175b9; }
+
+.system { color: #808080; }
+.error { color: #e75858; font-weight: bold; }
+.reply { color: #808080; }
+.error_reply { color: #e75858; }
+.dcc_send_send { color: #3175b9; }
+.dcc_send_receive { color: #3175b9; }
+.privmsg {}
+.notice { color: #808080; }
+.action { color: #d4d4d4; font-style: italic; }
+.join { color: #bcbced; }
+.part { color: #cd87aa; }
+.kick { color: #c16895; }
+.quit { color: #c16895; }
+.kill { color: #c16895; }
+.nick { color: #95bfda; }
+.mode { color: #7878dc; }
+.topic { color: #d5d5ff; }
+.invite { color: #9abfe4; font-style: italic; }
+.wallops { color: #808080; }
+.debug_send { color: #808080; }
+.debug_receive { color: #808080; }
